# studia-app

./: .gitignore  develop.sh  docker-compose.yml
app/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/app/: alembic.ini  main.py  module.py
app/app/controller/mysql/: auth.py  classes.py
app/app/controller/nosql/: auth.py  classes.py
app/app/migrations/: env.py
app/app/migrations/versions/: 179b0b57c484_add_timestamp_to_auth_model.py  a2781a18c7c9_create_model_class.py  a854b6be4a62_create_model_auth.py  bb9a172bff59_add_name_and_color_hex_to_class.py  cc0587067e65_fix_typo.py  d3ce0bbcee3b_add_on_delete_cascade.py
app/app/models/: auth.py  classes.py  types.py
app/app/routes/: auth.py  classes.py
app/app/schemas/: classes.py  form.py  media.py  object.py  user.py
app/app/service/auth/: jwt.py
app/app/service/db/: db_mongo.py  db_sql.py
app/app/service/helper/: exception.py
app/app/utils/: code_generator.py  design_generator.py  password.py
client-studia/: Dockerfile  package.json  vite.config.ts
client-studia/nginx/: nginx.conf
client-studia/src/: App.tsx  main.tsx
client-studia/src/context/redux/: store.ts
client-studia/src/layout/: AuhtLayout.tsx  IndexLayout.tsx
client-studia/src/pages/: Home.tsx
client-studia/src/pages/auth/: Login.tsx  Register.tsx
client-studia/src/pages/helper/: 404.tsx
client-studia/src/service/: AuthWrapper.tsx
client-studia/src/styles/: index.css
client-studia/src/theme/: extendTheme.ts
client-studia/src/types/auth/: type.ts
(+3 files in other folders)
