[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pymongo = "^4.3.3"
motor = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.9"
sqlalchemy-file = "^0.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
